--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,6 @@ else()
 endif()
 
 add_executable("GTL_NMJW" "main.cpp")
-find_package(glfw3 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(SDL2 REQUIRED)
@@ -24,4 +23,4 @@ if(TARGET SDL2::SDL2main)
     # It has an implicit dependency on SDL2 functions, so it MUST be added before SDL2::SDL2 (or SDL2::SDL2-static)
     target_link_libraries("GTL_NMJW" PRIVATE SDL2::SDL2main)
 endif()
-target_link_libraries("GTL_NMJW" PRIVATE glfw GLEW::GLEW OpenGL::GL SDL2::SDL2)
+target_link_libraries("GTL_NMJW" PRIVATE GLEW::GLEW OpenGL::GL SDL2::SDL2)
